# fromScratch-API

./: .dockerignore  Dockerfile  Makefile  README.md  compose.yml  fromScratch-API-collection.postman_collection.json  pyproject.toml
postgres/: Dockerfile
source/: alembic.ini  main.py
source/dependencies/: db.py
source/domain/: __init__.py  exceptions.py  mapper_interface.py  mappers.py
source/domain/customer/: __init__.py  filters.py  mapper.py  schema.py
source/domain/product/: __init__.py  filters.py  mapper.py  schema.py
source/domain/purchase/: __init__.py  filters.py  mapper.py  schema.py
source/middlewares/: postgres.py
source/migrations/: env.py  script.py.mako
source/migrations/versions/: 2025_10_07_1357-fa637e4fb615_first_migration.py
source/models/: __init__.py  base.py  customer.py  product.py  purchase.py  purchase_product.py
source/routers/: __init__.py  customer.py  product.py  purchase.py
source/services/: __init__.py  abc_postgres_service.py  abc_service.py
source/services/customer/: __init__.py  service.py
source/services/product/: __init__.py  service.py
source/services/purchase/: __init__.py  service.py
source/settings/: db.py
source/tests/: conftest.py
source/tests/factories/domain/: customer_create.py  product_create.py  purchase_create.py
source/tests/factories/models/: customer.py  product.py  purchase.py
source/tests/services/: test_customer_service.py  test_product_service.py  test_purchase_service.py
source/tests/services/features/: customer_pg_service.feature  (+2 more)
source/utils/: load_env_var.py
